# ProjetoEDOO

./: README.md  index.css  index.html
ProjetoEDOO/: .gitignore  CMakeLists.txt  cliente.cpp  cliente.h  globals.h  main.cpp  pedido.cpp  pedido.h  prato.cpp  prato.h  produto.cpp  produto.h  restaurante.cpp  restaurante.h  server.cpp
ProjetoEDOO/banco_de_dados/: estoque.json  fluxo.json  pedidos.json
ProjetoEDOO/front-end/: cardapio.html  estoque.html  login.html  pedidos.html  retaurante.html  status.html
ProjetoEDOO/front-end/css/: cardapio.css  estoque.css  fonte.css  header.css  headerCliente.css  login.css  pedidos.css  restaurante.css  status.css  style.css
ProjetoEDOO/front-end/javascript/: cardapio.js  estoque.js  pedidos.js  status.js
